# swe-ai-orchestrator

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/orchestrator/: __init__.py  graph.py  llm.py  progress.py  state.py
src/orchestrator/agents/: __init__.py  coding.py  monitoring.py  requirements.py  system_design.py  testing.py
src/orchestrator/prompts/: templates.py
src/orchestrator/tools/: file_tools.py  monitoring_tools.py  test_tools.py
